Обновление архитектуры системы анализа: переименован класс DataCollector в EventAnalyzer, добавлены функции анализа событий и их влияния на изменение цены. Обновлены требования и документация, добавлены настройки базы данных в конфигурацию. Обновлен .gitignore для исключения файлов баз данных.

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,12 @@ market_analysis.log
 .env.*.local
 
 # Jupyter Notebook
-.ipynb_checkpoints 
+.ipynb_checkpoints
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+data/*.db
+data/*.sqlite
+data/*.sqlite3 
