--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ python-dateutil==2.8.2
 pyyaml==6.0.1
 loguru==0.7.2 
 pyarrow==20.0.0
-sqlalchemy==2.0.27 
+sqlalchemy==2.0.27
+cryptocompare==0.7.0
+requests==2.32.3 
